RESOLVED FIXED 54624
[EFL] Fix coding style errors in ewk_view.h
https://bugs.webkit.org/show_bug.cgi?id=54624
Summary [EFL] Fix coding style errors in ewk_view.h
Gyuyoung Kim
Reported 2011-02-17 01:20:07 PST
There are too many style errors in ewk_view.h. The errors are due to unmeaningful parameter names. I think there are two choices. One is to remove the unmeaningful parameter names. The other is to modify the parameter names with meaningful. WebKit EFL guys, I'd like to know how do your guys think about this issue ? - Style Error Message Source/WebKit/efl/ewk/ewk_view.h:321: The parameter name "e" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:322: The parameter name "e" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:324: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:325: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:325: The parameter name "cache" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:328: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:330: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:331: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:333: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:334: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:336: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:337: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:339: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:340: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:341: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:343: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:344: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:346: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:347: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:349: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:350: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:351: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:352: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:353: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:354: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:355: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:357: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:357: The parameter name "ev" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:359: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:360: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:362: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:364: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:365: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:366: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:367: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:369: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:371: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:372: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:373: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:375: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:376: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:377: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:379: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:380: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:381: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:383: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:384: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:385: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:387: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:388: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:390: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:391: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:393: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:394: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:395: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:396: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:397: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:399: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:400: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:401: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:403: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:404: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:404: The parameter name "n" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:405: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:406: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:407: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:409: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:412: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:413: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:415: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:416: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:418: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:419: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:421: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:422: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:423: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:424: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:426: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:427: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:429: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:430: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:432: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:433: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:435: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:436: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:438: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:439: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:441: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:442: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:443: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:444: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:446: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:447: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:449: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:450: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:451: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:452: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:453: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:454: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:456: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:457: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:458: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:459: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:460: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:461: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:462: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:463: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:465: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:466: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:468: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:469: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:471: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:472: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:474: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:475: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:477: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:478: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:480: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:481: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:483: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:484: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:486: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:487: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:488: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:489: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:491: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:492: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:494: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:495: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:498: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:500: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:501: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:503: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:505: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:517: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:528: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:529: The parameter name "priv" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:531: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:532: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:533: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:534: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:535: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:536: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/efl/ewk/ewk_view.h:537: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5]
Attachments
Patch (25.15 KB, patch)
2011-02-17 18:43 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2011-02-17 18:43:23 PST
Created attachment 82889 [details] Patch I remove unmeaning parameters in ewk_view.h. And, I change "n" with "number" in ewk_view_pre_render_relative_radius(). EAPI Eina_Bool ewk_view_pre_render_relative_radius(Evas_Object *o, unsigned int n); => EAPI Eina_Bool ewk_view_pre_render_relative_radius(Evas_Object*, unsigned int number);
WebKit Commit Bot
Comment 2 2011-02-18 19:07:24 PST
Comment on attachment 82889 [details] Patch Clearing flags on attachment: 82889 Committed r79067: <http://trac.webkit.org/changeset/79067>
WebKit Commit Bot
Comment 3 2011-02-18 19:07:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.