2011-02-18  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Kent Tamura.

        [EFL] Fix coding style errors in ewk_view.h
        https://bugs.webkit.org/show_bug.cgi?id=54624

        Fix style errors in ewk_view.h.

        * ewk/ewk_view.cpp:
        (ewk_view_pre_render_relative_radius):
        * ewk/ewk_view.h:

Canonical link: https://commits.webkit.org/69020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79067 268f45cc-cd09-0410-ab3c-d52691b4dbfc