Source/WebKit/efl/ewk/ewk_view.cpp
@@ -2284,7 +2284,7 @@ Eina_Bool ewk_view_pre_render_region(Evas_Object* o, Evas_Coord x, Evas_Coord y,
  *
  * @see ewk_view_pre_render_region()
  */
-Eina_Bool ewk_view_pre_render_relative_radius(Evas_Object* o, unsigned int n)
+Eina_Bool ewk_view_pre_render_relative_radius(Evas_Object* o, unsigned int number)
 {
     EWK_VIEW_SD_GET_OR_RETURN(o, sd, EINA_FALSE);
     EWK_VIEW_PRIV_GET_OR_RETURN(sd, priv, EINA_FALSE);
@@ -2295,7 +2295,7 @@ Eina_Bool ewk_view_pre_render_relative_radius(Evas_Object* o, unsigned int n)
         return EINA_FALSE;
 
     cur_zoom = ewk_frame_zoom_get(sd->main_frame);
-    return sd->api->pre_render_relative_radius(sd, n, cur_zoom);
+    return sd->api->pre_render_relative_radius(sd, number, cur_zoom);
 }
 
 /**
